--- a/src/app.sass
+++ b/src/app.sass
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300')
+
 *
     margin : 0
     padding : 0
     box-sizing : border-box
     
 body
-    background : orange
-    font-family : 'Arial'
+    background : #eee
+    font-family : 'Lato'
+    min-height : 100vh
+    text-align : center
